tests/baselines/reference/moduleResolutionWithSuffixes_oneNotFound.errors.txt
/index.ts(1,21): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== /tsconfig.json (0 errors) ====
    {
    	"compilerOptions": {
    		"moduleResolution": "node",
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /index.ts (1 errors) ====
    import { ios } from "./foo";
                        ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
==== /foo.ts (0 errors) ====
    export function base() {}
    